--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -20,11 +20,17 @@
     font-size: 11px;
     color: white;
 }
+
 .Fitness-Add {
+    height: 50px;         
+    width: 60px;
+}
+
+.container-fa {    
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
     margin-bottom: 80px;
-    height: 60px;
+    width: 60px;   
 }
